--- a/src/components/LikeButton.css
+++ b/src/components/LikeButton.css
@@ -1,6 +1,6 @@
 .likebutton {
   margin-top: 3%;
-  background-color: magenta;
+  background-color: royalblue;
   border: 2px solid black;
   border-radius: 50%;
   color: white;
